--- a/impc_api_helper/pyproject.toml
+++ b/impc_api_helper/pyproject.toml
@@ -14,7 +14,8 @@ authors = [
 dependencies = [
     "pandas>=2.2.0",
     "requests>=2.31.0",
-    "tqdm>=4.66.4"
+    "tqdm>=4.66.4",
+    "pydantic>=2.9"
 ]
 
 readme = "README.md"
