--- a/impc_module/pyproject.toml
+++ b/impc_module/pyproject.toml
@@ -6,6 +6,15 @@ build-backend = "setuptools.build_meta"
 name = "impc_api"
 version = "1.0.0"
 description = "A package to facilitate making API requests to the IMPC Solr API"
+long_description_content_type = "text/x-rst"
+long_description = """
+IMPC_API
+========
+
+``impc_api`` is a python package.
+
+**Install the package running**: ``pip install impc_api``
+"""
 authors = [
     { name = "MPI2" },
     { name = "Marina Kan" },
