--- a/impc_module/pyproject.toml
+++ b/impc_module/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pydantic>=2.9"
 ]
 
-readme = "README.md"
+readme = "impc_module/README.md"
 requires-python = ">=3.10"
 
 [project.optional-dependencies]
