--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,6 @@ jobs:
           pip install setuptools wheel
       - name: Build package
         run: |
-          python3 impc_module/setup.py sdist bdist_wheel  # Could also be python -m build
+          cd impc_module && python3 setup.py sdist bdist_wheel && mv dist ../ && cd .. 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
